# Clincial_Processing_7T

./: pyproject.toml  setup.py
config/: config.yml
workflow/: Snakefile
