[tool.poetry]
name="clinical_processing_7T"
description = "7t lhsc processing"
readme = "README.md"
authors = ["Arun Thurairajah & Mackenzie Snyder"]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
snakemake = [
    { version=">=7.20,<8", python = "<3.11" },
    { version=">=8.1.2", python = ">=3.11" },
]
snakebids = ">=0.13.1"
pulp = "<2.8"

[tool.poetry.scripts]
clincial_processing_7T = "run:main"
